--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,69 @@
+body {
+  margin: 0;
+  font-family: "Roboto", sans-serif;
+}
 
+header {
+  width: 100%;
+  text-align: center;
+}
+header img {
+  width: 45vw;
+  margin-top: 5vw;
+  margin-bottom: 3.8vw;
+}
+
+.section-1 {
+  background-color: #f7f7f7;
+  width: 100%;
+  height: 85vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.section-1__header {
+  background-color: #e6e6e6;
+  width: 100%;
+  height: 13vw;
+  display: flex;
+  flex-direction: row;
+}
+.section-1__header i {
+  font-size: 4.4vw;
+  margin-right: 4.5vw;
+  margin-left: 28vw;
+  margin-top: 4.6vw;
+}
+.section-1__header p {
+  font-weight: 700;
+  font-size: 4.4vw;
+}
+.section-1__body {
+  width: 80vw;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+}
+.section-1__body h1 {
+  font-size: 6.68vw;
+  text-align: center;
+  margin-top: 9vw;
+  margin-bottom: 3vw;
+}
+.section-1__body p {
+  font-size: 4.5vw;
+  margin-top: 0;
+  margin-bottom: 7vw;
+}
+.section-1__body button {
+  width: 53vw;
+  height: 11vw;
+  font-size: 4vw;
+  color: white;
+  background-color: purple;
+  border: none;
+}
 
 /*# sourceMappingURL=style.css.map */
