--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,6 +5,7 @@ body {
 
 header {
   width: 100%;
+  height: auto;
   text-align: center;
 }
 header img {
@@ -13,7 +14,7 @@ header img {
   margin-bottom: 3.8vw;
 }
 
-.section-1 {
+.section1 {
   background-color: #f7f7f7;
   width: 100%;
   height: 85vw;
@@ -21,24 +22,25 @@ header img {
   flex-direction: column;
   align-items: center;
 }
-.section-1__header {
+.section1__header {
   background-color: #e6e6e6;
   width: 100%;
   height: 13vw;
   display: flex;
   flex-direction: row;
+  box-shadow: inset 0vw 3vw 1vw -2vw #cccccc;
 }
-.section-1__header i {
+.section1__header i {
   font-size: 4.4vw;
   margin-right: 4.5vw;
   margin-left: 28vw;
   margin-top: 4.6vw;
 }
-.section-1__header p {
+.section1__header p {
   font-weight: 700;
   font-size: 4.4vw;
 }
-.section-1__body {
+.section1__body {
   width: 80vw;
   height: auto;
   display: flex;
@@ -46,24 +48,122 @@ header img {
   text-align: center;
   align-items: center;
 }
-.section-1__body h1 {
+.section1__body h1 {
   font-size: 6.68vw;
   text-align: center;
   margin-top: 9vw;
   margin-bottom: 3vw;
 }
-.section-1__body p {
+.section1__body p {
   font-size: 4.5vw;
   margin-top: 0;
   margin-bottom: 7vw;
 }
-.section-1__body button {
+.section1__body button {
   width: 53vw;
   height: 11vw;
   font-size: 4vw;
   color: white;
-  background-color: purple;
+  background: linear-gradient(357deg, #9356DC, #FF79DA);
   border: none;
+  box-shadow: 0vw 0.6vw 0.5vw 0.2vw #e0dede;
+  border-radius: 25vw;
+}
+
+.section2 {
+  width: 100%;
+  height: 90vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.section2 h2 {
+  text-align: left;
+  width: 90vw;
+  font-size: 6.68vw;
+}
+.section2__fonctionnement {
+  width: 86vw;
+  height: 17vw;
+  background-color: #f7f7f7;
+  box-shadow: 0vw 0.6vw 0.5vw 0.2vw #e0dede;
+  margin-bottom: 6vw;
+  border-radius: 5.4vw;
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+}
+.section2__fonctionnement:hover {
+  background-color: #f2eafb;
+}
+.section2__fonctionnement:hover i {
+  color: #9356DC;
+}
+.section2 span {
+  background-color: #9356DC;
+  width: 6.2vw;
+  height: 6.2vw;
+  border-radius: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 3vw;
+  color: white;
+  margin-left: -2.7vw;
+  margin-right: 5vw;
+}
+.section2 i {
+  margin-right: 5vw;
+  font-size: 5vw;
+}
+.section2 p {
+  font-size: 5vw;
+}
+
+.section3 {
+  background-color: #f7f7f7;
+  padding: 4.5vw;
+}
+.section3 div {
+  background-color: white;
+  height: 75vw;
+  border-radius: 6vw;
+  margin-bottom: 6vw;
+}
+.section3 div div {
+  display: flex;
+  flex-direction: row;
+  height: auto;
+  width: auto;
+  justify-content: space-between;
+  margin-left: 4vw;
+  align-items: center;
+}
+.section3 i {
+  font-size: 6.3vw;
+  margin-right: 12vw;
+  position: absolute;
+  right: 0;
+  background-color: white;
+}
+.section3 .fas {
+  color: yellow;
+}
+.section3 h3 {
+  margin-top: 1.5vw;
+  margin-bottom: 1vw;
+  font-size: 5vw;
+}
+.section3 p {
+  margin-top: 0.5vw;
+  margin-bottom: 0;
+  font-size: 4.7vw;
+}
+.section3 img {
+  width: 100%;
+  height: 56vw;
+  border-radius: 6vw 6vw 0 0;
+  object-fit: cover;
 }
 
 /*# sourceMappingURL=style.css.map */
