--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,7 +14,7 @@ header img {
   margin-bottom: 3.8vw;
 }
 
-.section1 {
+.lieu {
   background-color: #f7f7f7;
   width: 100%;
   height: 85vw;
@@ -22,7 +22,7 @@ header img {
   flex-direction: column;
   align-items: center;
 }
-.section1__header {
+.lieu__header {
   background-color: #e6e6e6;
   width: 100%;
   height: 13vw;
@@ -30,17 +30,17 @@ header img {
   flex-direction: row;
   box-shadow: inset 0vw 3vw 1vw -2vw #cccccc;
 }
-.section1__header i {
+.lieu__header i {
   font-size: 4.4vw;
   margin-right: 4.5vw;
   margin-left: 28vw;
   margin-top: 4.6vw;
 }
-.section1__header p {
+.lieu__header p {
   font-weight: 700;
   font-size: 4.4vw;
 }
-.section1__body {
+.lieu__body {
   width: 80vw;
   height: auto;
   display: flex;
@@ -48,18 +48,18 @@ header img {
   text-align: center;
   align-items: center;
 }
-.section1__body h1 {
+.lieu__body h1 {
   font-size: 6.68vw;
   text-align: center;
   margin-top: 9vw;
   margin-bottom: 3vw;
 }
-.section1__body p {
+.lieu__body p {
   font-size: 4.5vw;
   margin-top: 0;
   margin-bottom: 7vw;
 }
-.section1__body button {
+.lieu__body button {
   width: 53vw;
   height: 11vw;
   font-size: 4vw;
@@ -70,19 +70,19 @@ header img {
   border-radius: 25vw;
 }
 
-.section2 {
+.fonctionnement {
   width: 100%;
   height: 90vw;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.section2 h2 {
+.fonctionnement h2 {
   text-align: left;
   width: 90vw;
   font-size: 6.68vw;
 }
-.section2__fonctionnement {
+.fonctionnement__div {
   width: 86vw;
   height: 17vw;
   background-color: #f7f7f7;
@@ -93,13 +93,13 @@ header img {
   display: flex;
   flex-direction: row;
 }
-.section2__fonctionnement:hover {
+.fonctionnement__div:hover {
   background-color: #f2eafb;
 }
-.section2__fonctionnement:hover i {
+.fonctionnement__div:hover i {
   color: #9356DC;
 }
-.section2 span {
+.fonctionnement span {
   background-color: #9356DC;
   width: 6.2vw;
   height: 6.2vw;
@@ -112,25 +112,26 @@ header img {
   margin-left: -2.7vw;
   margin-right: 5vw;
 }
-.section2 i {
+.fonctionnement i {
   margin-right: 5vw;
   font-size: 5vw;
 }
-.section2 p {
+.fonctionnement p {
   font-size: 5vw;
+  text-shadow: red;
 }
 
-.section3 {
+.restaurant {
   background-color: #f7f7f7;
   padding: 4.5vw;
 }
-.section3 div {
+.restaurant div {
   background-color: white;
   height: 75vw;
   border-radius: 6vw;
   margin-bottom: 6vw;
 }
-.section3 div div {
+.restaurant div div {
   display: flex;
   flex-direction: row;
   height: auto;
@@ -139,31 +140,61 @@ header img {
   margin-left: 4vw;
   align-items: center;
 }
-.section3 i {
-  font-size: 6.3vw;
-  margin-right: 12vw;
+.restaurant i {
+  font-size: 6.4vw;
   position: absolute;
-  right: 0;
-  background-color: white;
+  right: 10vw;
 }
-.section3 .fas {
-  color: yellow;
+.restaurant__heart {
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+  transform-origin: center;
+  background-image: linear-gradient(357deg, #9356DC, #FF79DA);
+  opacity: 0;
+  transition: all 0.3s cubic-bezier(0.42, 0, 0.73, 2.29);
 }
-.section3 h3 {
+.restaurant__heart:hover {
+  opacity: 1;
+  transform: scale(1.12);
+}
+.restaurant h3 {
   margin-top: 1.5vw;
   margin-bottom: 1vw;
   font-size: 5vw;
 }
-.section3 p {
+.restaurant p {
   margin-top: 0.5vw;
   margin-bottom: 0;
   font-size: 4.7vw;
 }
-.section3 img {
+.restaurant img {
   width: 100%;
   height: 56vw;
   border-radius: 6vw 6vw 0 0;
   object-fit: cover;
+}
+
+.footer {
+  width: 100%;
+  height: 50vw;
+  background-color: #242424;
+  color: white;
+  padding-top: 5vw;
+}
+.footer__logo {
+  font-family: Shrikhand;
+  font-size: 6vw;
+  margin-left: 6vw;
+}
+.footer p {
+  margin-left: 6vw;
+  font-size: 3.8vw;
+}
+.footer .fa-hands-helping {
+  font-size: 2.8vw;
 }
 
 /*# sourceMappingURL=style.css.map */
