--- a/sass/style.scss
+++ b/sass/style.scss
@@ -14,7 +14,7 @@ header{
         margin-bottom: 3.8vw;
     }
 }
-.section1{
+.lieu{
     background-color: $gris-clair;
     width: 100%;
     height: 85vw;
@@ -69,7 +69,7 @@ header{
         border-radius: 25vw;
     }
 }
-.section2{
+.fonctionnement{
     width: 100%;
     height: 90vw;
     display: flex;
@@ -80,7 +80,7 @@ header{
         width: 90vw;
         font-size: $titre-section;
     }
-    &__fonctionnement{
+    &__div{
         width: 86vw;
         height: 17vw;
         background-color: $gris-clair;
@@ -115,9 +115,10 @@ header{
     }
     p{
         font-size: 5vw;
+        text-shadow: red;
     }
 }
-.section3{
+.restaurant{
     background-color: $gris-clair;
     padding: 4.5vw;
     div{
@@ -136,17 +137,24 @@ header{
         align-items: center;
     }
     i{
-        font-size: 6.3vw;
-        margin-right: 12vw;
+        font-size: 6.4vw;
         position: absolute;
-        right: 0;
-        background-color: white;
-        &:hover{
-            
-        }
+        right: 10vw;
     }
-    .fas{
-        color: yellow;
+    &__heart{
+        background-size: 100%;
+        -webkit-background-clip: text;
+        -moz-background-clip: text;
+        -webkit-text-fill-color: transparent; 
+        -moz-text-fill-color: transparent;
+        transform-origin: center;
+        background-image: linear-gradient(357deg, $primaire ,$secondaire);
+        opacity: 0;
+        transition: all 0.3s cubic-bezier(0.42, 0, 0.73, 2.29);
+        &:hover{
+           opacity: 1;
+           transform: scale(1.12);
+        }
     }
     h3{
         margin-top: 1.5vw;
@@ -163,5 +171,24 @@ header{
         height: 56vw;
         border-radius: 6vw 6vw 0 0;
         object-fit: cover;
+    }
+}
+.footer{
+    width: 100%;
+    height: 50vw;
+    background-color: rgb(36, 36, 36);
+    color: white;
+    padding-top: 5vw;
+    &__logo{
+        font-family: Shrikhand;
+        font-size: 6vw;
+        margin-left: 6vw;
+    }
+    p{
+        margin-left: 6vw;
+        font-size: 3.8vw;
+    }
+    .fa-hands-helping{
+        font-size: 2.8vw;
     }
 }
