--- a/sass/style.scss
+++ b/sass/style.scss
@@ -128,20 +128,19 @@ header{
     h2{
         font-size: $titre-section;
     }
-    div{
-        background-color: white;
+    &__div{
         height: 75vw;
         border-radius: 6vw;
         margin-bottom: 6vw;
+        background-color: white;
     }
-    div div{
+    &__div div{
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         height: auto;
         width: auto;
-        justify-content: space-between;
-        margin-left: 4vw;
-        align-items: center;
+        margin-left: 2.5vw;
+        justify-content: center;
     }
     i{
         font-size: 6.4vw;
