--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,7 +1,9 @@
 $gris-clair: rgb(247, 247, 247);
 $gris-foncer: rgb(230, 230, 230);
-$titre-section: 6.68vw;
-$box-shadow: 0vw 0.6vw 0.5vw 0.2vw rgb(224, 222, 222);
+$titre-section: 6.8vw;
+$box-shadow: 0vw 0.6vw 5vw 0.2vw rgb(224, 222, 222);
 $primaire: #9356DC;
 $secondaire: #FF79DA;
 $tertiaire: #99E2D0;
+$margin-left-page: 4.5vw;
+$margin-right-page: 4.5vw;
