--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,11 @@
+@keyframes slidedown {
+  from {
+    transform: scale(0);
+  }
+  to {
+    transform: scale(1);
+  }
+}
 body {
   margin: 0;
   font-family: "Roboto", sans-serif;
@@ -133,11 +141,26 @@ header img {
   font-size: 6.8vw;
 }
 .restaurant__div {
-  height: 75vw;
+  height: 65vw;
   border-radius: 6vw;
   margin-bottom: 6vw;
   background-color: white;
   box-shadow: 0vw 0.6vw 5vw 0.2vw #e0dede;
+}
+.restaurant .nouveau {
+  background-color: #99E2D0;
+  width: 21.7vw;
+  height: 7.5vw;
+  display: flex;
+  border-radius: 0.5vw;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  margin-top: 3vw;
+  right: 8vw;
+  font-size: 3.8vw;
+  font-weight: 700;
+  color: #278870;
 }
 .restaurant__div div {
   display: flex;
@@ -151,13 +174,13 @@ header img {
   position: absolute;
   font-size: 6.4vw;
   right: 10vw;
-  margin-top: 1vw;
+  margin-top: 1.7vw;
 }
 .restaurant__heart-like {
   background-size: 100%;
   font-size: 6.4vw;
   right: 10vw;
-  margin-top: 1vw;
+  margin-top: 1.7vw;
   position: absolute;
   -webkit-background-clip: text;
   -moz-background-clip: text;
@@ -185,9 +208,10 @@ header img {
 }
 .restaurant img {
   width: 100%;
-  height: 56vw;
+  height: 47vw;
   border-radius: 6vw 6vw 0 0;
   object-fit: cover;
+  object-position: center;
 }
 
 .footer {
@@ -231,7 +255,7 @@ header img {
   margin-left: 4.5vw;
   margin-top: 0;
   padding-top: 8vw;
-  font-size: 6.8vw;
+  font-size: 7.5vw;
   display: flex;
   width: 95vw;
 }
@@ -253,13 +277,70 @@ header img {
   margin-bottom: 3vw;
   margin-left: 2vw;
 }
-.la-palette-du-gout__div div {
-  height: 19vw;
+.la-palette-du-gout .plat {
+  height: 20vw;
   width: 100%;
   background-color: white;
-  border-radius: 4vw;
+  border-radius: 4.3vw;
   margin-bottom: 5vw;
   box-shadow: 0vw 0.6vw 5vw 0.2vw #e0dede;
+  display: flex;
+  flex-direction: row;
+  animation: slidedown 0.9s forwards;
+  animation-timing-function: cubic-bezier(0.5, 1.58, 0.34, 0.82);
+  transform: scale(0);
+}
+.la-palette-du-gout .delay-1 {
+  animation-delay: 0.1s;
+}
+.la-palette-du-gout .delay-2 {
+  animation-delay: 0.2s;
+}
+.la-palette-du-gout .delay-3 {
+  animation-delay: 0.3s;
+}
+.la-palette-du-gout .delay-4 {
+  animation-delay: 0.4s;
+}
+.la-palette-du-gout .delay-5 {
+  animation-delay: 0.5s;
+}
+.la-palette-du-gout .delay-6 {
+  animation-delay: 0.6s;
+}
+.la-palette-du-gout .delay-7 {
+  animation-delay: 0.7s;
+}
+.la-palette-du-gout .delay-8 {
+  animation-delay: 0.8s;
+}
+.la-palette-du-gout .delay-9 {
+  animation-delay: 0.9s;
+}
+.la-palette-du-gout .delay-10 {
+  animation-delay: 1s;
+}
+.la-palette-du-gout .plat__text {
+  font-size: 4vw;
+  margin-left: 3.7vw;
+  width: 70vw;
+}
+.la-palette-du-gout .plat__text h3 {
+  margin-top: 4vw;
+  margin-bottom: 2vw;
+  font-size: 4.7vw;
+}
+.la-palette-du-gout .plat__text p {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  margin: 0;
+}
+.la-palette-du-gout .plat__prix {
+  font-size: 4vw;
+  margin-top: 11.5vw;
+  margin-right: auto;
+  margin-left: 8vw;
 }
 .la-palette-du-gout button {
   width: 45vw;
