--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,6 @@
 @import '../sass/utils/_variables.scss';
 @import "../sass/utils/mixins.scss";
+@import "../sass/utils/keyframes.scss";
 body{
     margin: 0;
     font-family: 'Roboto', sans-serif;
@@ -129,11 +130,26 @@ header{
         font-size: $titre-section;
     }
     &__div{
-        height: 75vw;
+        height: 65vw;
         border-radius: 6vw;
         margin-bottom: 6vw;
         background-color: white;
         box-shadow: $box-shadow;
+    }
+    .nouveau{
+        background-color: $tertiaire;
+        width: 21.7vw;
+        height: 7.5vw;
+        display: flex;
+        border-radius: 0.5vw;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        margin-top: 3vw;
+        right: 8vw;
+        font-size: 3.8vw;
+        font-weight: 700;
+        color: darken($tertiaire, 40);
     }
     &__div div{
         display: flex;
@@ -147,13 +163,13 @@ header{
         position: absolute;
         font-size: 6.4vw;
         right: 10vw;
-        margin-top: 1vw;
+        margin-top: 1.7vw;
     }
     &__heart-like{
         background-size: 100%;
         font-size: 6.4vw;
         right: 10vw;
-        margin-top: 1vw;
+        margin-top: 1.7vw;
         position: absolute;
         -webkit-background-clip: text;
         -moz-background-clip: text;
@@ -181,9 +197,10 @@ header{
     }
     img{
         width: 100%;
-        height: 56vw;
+        height: 47vw;
         border-radius: 6vw 6vw 0 0;
         object-fit: cover;
+        object-position: center;
     }
 }
 .footer{
@@ -224,7 +241,7 @@ header{
         margin-left: $margin-left-page;
         margin-top: 0;
         padding-top: 8vw;
-        font-size: $titre-section;
+        font-size: 7.5vw;
         display: flex;
         width: 95vw;
     }
@@ -246,13 +263,45 @@ header{
         margin-bottom: 3vw;
         margin-left: 2vw;
     }
-    &__div div{
-        height: 19vw;
+    .plat{
+        height: 20vw;
         width: 100%;
         background-color: white;
-        border-radius: 4vw;
+        border-radius: 4.3vw;
         margin-bottom: 5vw;
         box-shadow: $box-shadow;
+        display: flex;
+        flex-direction: row;
+        animation: slidedown 0.9s forwards;
+        animation-timing-function: cubic-bezier(.5,1.58,.34,.82);
+        transform: scale(0);
+    }
+    @for $i from 1 through 10 {
+        .delay-#{$i}{
+            animation-delay: #{$i/10}s;
+        }
+    }
+    .plat__text{
+        font-size: $text-plat;
+        margin-left: 3.7vw;
+        width: 70vw;
+    }
+    .plat__text h3{
+        margin-top: 4vw;
+        margin-bottom: 2vw;
+        font-size: 4.7vw;
+    }
+    .plat__text p{
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
+        margin: 0;
+        }
+    .plat__prix{
+        font-size: $text-plat;
+        margin-top: 11.5vw;
+        margin-right: auto;
+        margin-left: 8vw;
     }
     button{
         width: 45vw;
@@ -265,5 +314,6 @@ header{
         border-radius: 25vw;
        
     }
+    
 }
 
