--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,6 +21,16 @@ header img {
   margin-top: 5vw;
   margin-bottom: 3.8vw;
 }
+header a {
+  text-decoration: none;
+  color: black;
+}
+header i {
+  font-size: 5vw;
+  position: absolute;
+  left: 7.1vw;
+  top: 6.6vw;
+}
 
 .lieu {
   background-color: #f7f7f7;
