--- a/sass/style.scss
+++ b/sass/style.scss
@@ -14,6 +14,16 @@ header{
         margin-top: 5vw;
         margin-bottom: 3.8vw;
     }
+    a{
+        text-decoration: none;
+        color: black;
+    }
+    i{
+        font-size: 5vw;
+        position: absolute;
+        left: 7.1vw;
+        top: 6.6vw;
+    }
 }
 .lieu{
     background-color: $gris-clair;
