--- a/public/css/style.css
+++ b/public/css/style.css
@@ -244,9 +244,11 @@ header i {
   font-size: 2.8vw;
 }
 
-/* PAGE RESTAURANT LA PALETTE DU GOUT */
+/* PAGE RESTAURANT  */
 .body__image {
   width: 100%;
+  height: 65vw;
+  object-fit: cover;
 }
 
 .presentation {
