--- a/sass/style.scss
+++ b/sass/style.scss
@@ -232,9 +232,11 @@ header{
         font-size: 2.8vw;
     }
 }
-/* PAGE RESTAURANT LA PALETTE DU GOUT */
+/* PAGE RESTAURANT  */
 .body__image{
     width: 100%;
+    height: 65vw;
+    object-fit: cover;
 }
 .presentation{
     background-color: $gris-clair;
