--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,362 +1,24 @@
 @import '../sass/utils/_variables.scss';
 @import "../sass/utils/mixins.scss";
+@import "../sass/components/animations.scss";
+@import "../sass/components/loader.scss";
 @import "../sass/utils/keyframes.scss";
-body{
-    margin: 0;
-    font-family: 'Roboto', sans-serif;
-}
-header{
-    width: 100%;
-    height: auto;
-    text-align: center;
-    img{
-        width: 45vw;
-        margin-top: 5vw;
-        margin-bottom: 3.8vw;
-    }
-    a{
-        text-decoration: none;
-        color: black;
-    }
-    i{
-        font-size: 5vw;
-        position: absolute;
-        left: 7.1vw;
-        top: 6.6vw;
-    }
-}
-.lieu{
-    background-color: $gris-clair;
-    width: 100%;
-    height: 85vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    &__header{
-        background-color: $gris-foncer;
-        width: 100%;
-        height: 13vw;
-        display: flex;
-        flex-direction: row;
-        box-shadow: inset 0vw 3vw 1vw -2vw rgb(204, 204, 204);
-    }
-    &__header i{
-        font-size: 4.4vw;
-        margin-right: 4.5vw;
-        margin-left: 28vw;
-        margin-top: 4.6vw;
-    }
-    &__header p{
-        @include roboto;
-        font-size: 4.4vw;
-    }
-    &__body{
-        width: 80vw;
-        height: auto;
-        display: flex;
-        flex-direction: column;
-        text-align: center;
-        align-items: center;
-    }
-    &__body h1{
-        font-size: $titre-section;
-        text-align: center;
-        margin-top: 9vw;
-        margin-bottom: 3vw;
-    }
-    &__body p{
-        font-size: 4.5vw;
-        margin-top: 0;
-        margin-bottom: 7vw;
-    }
-    &__body button{
-        width: 53vw;
-        height: 11vw;
-        font-size: 4vw;
-        color: white;
-        background: linear-gradient(357deg, $primaire ,$secondaire);
-        border: none;
-        box-shadow: $box-shadow;
-        border-radius: 25vw;
-    }
-}
-.fonctionnement{
-    width: 100%;
-    height: 90vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    h2{
-        text-align: left;
-        width: 90vw;
-        font-size: $titre-section;
-    }
-    &__div{
-        width: 86vw;
-        height: 17vw;
-        background-color: $gris-clair;
-        box-shadow: $box-shadow;
-        margin-bottom: 6vw;
-        border-radius: 5.4vw;
-        align-items: center;
-        display: flex;
-        flex-direction: row;
-        &:hover{
-            background-color: lighten($primaire, 35);
-            i{
-                color: $primaire;
-            }
-        }
-    }
-    span{
-        background-color: $primaire;
-        width: 6.2vw;
-        height: 6.2vw;
-        border-radius: 100%;display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 3vw;
-        color: white;
-        margin-left: -2.7vw;
-        margin-right: 5vw;
-    }
-    i{
-        margin-right: 5vw;
-        font-size: 5vw;
-    }
-    p{
-        font-size: 5vw;
-        text-shadow: red;
-    }
-}
-.restaurant{
-    background-color: $gris-clair;
-    padding: 4.5vw;
-    a{
-        text-decoration: none;
-        color: black;
-    }
-    h2{
-        font-size: $titre-section;
-    }
-    &__div{
-        height: 65vw;
-        border-radius: 6vw;
-        margin-bottom: 6vw;
-        background-color: white;
-        box-shadow: $box-shadow;
-    }
-    .nouveau{
-        background-color: $tertiaire;
-        width: 21.7vw;
-        height: 7.5vw;
-        display: flex;
-        border-radius: 0.5vw;
-        justify-content: center;
-        align-items: center;
-        position: absolute;
-        margin-top: 3vw;
-        right: 8vw;
-        font-size: 3.8vw;
-        font-weight: 700;
-        color: darken($tertiaire, 40);
-    }
-    &__div div{
-        display: flex;
-        flex-direction: column;
-        height: auto;
-        width: auto;
-        margin-left: 2vw;
-        justify-content: center;
-    }
-    &__heart{
-        position: absolute;
-        font-size: 6.4vw;
-        right: 10vw;
-        margin-top: 1.7vw;
-    }
-    &__heart-like{
-        background-size: 100%;
-        font-size: 6.4vw;
-        right: 10vw;
-        margin-top: 1.7vw;
-        position: absolute;
-        -webkit-background-clip: text;
-        -moz-background-clip: text;
-        -webkit-text-fill-color: transparent; 
-        -moz-text-fill-color: transparent;
-        transform-origin: center;
-        background-image: linear-gradient(357deg, $primaire ,$secondaire);
-        opacity: 0;
-        transition: all 0.3s cubic-bezier(0.42, 0, 0.73, 2.29);
-        &:hover{
-           opacity: 1;
-           transform: scale(1.12);
-           width: 6.579vw;
-        }
-    }
-    h3{
-        margin-top: 1.5vw;
-        margin-bottom: 1vw;
-        font-size: 5vw;
-    }
-    p{
-        margin-top: 0.5vw;
-        margin-bottom: 0;
-        font-size: 4.7vw;
-    }
-    img{
-        width: 100%;
-        height: 47vw;
-        border-radius: 6vw 6vw 0 0;
-        object-fit: cover;
-        object-position: center;
-    }
-}
-.footer{
-    width: 100%;
-    height: 50vw;
-    background-color: rgb(36, 36, 36);
-    color: white;
-    padding-top: 5vw;
-    &__logo{
-        font-family: Shrikhand;
-        font-size: 6vw;
-        margin-left: 8.5vw;
-    }
-    p{
-        margin-left: 8.5vw;
-        font-size: 3.8vw;
-    }
-    .fa-hands-helping{
-        font-size: 2.8vw;
-    }
-}
-/* PAGE RESTAURANT  */
-.body__image{
-    width: 100%;
-    height: 65vw;
-    object-fit: cover;
-}
-.presentation{
-    background-color: $gris-clair;
-    border-radius: 12vw 12vw 0 0;
-    margin-top: -13vw;
-    position: relative;
-    padding-bottom: 15vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    &__h1{
-        font-family: Shrikhand;
-        font-weight: 500;
-        margin-left: $margin-left-page;
-        margin-top: 0;
-        padding-top: 8vw;
-        font-size: 7.5vw;
-        display: flex;
-        width: 95vw;
-    }
-    &__div{
-        height: auto;
-        margin-bottom: 4vw;
-        width: 95vw;
-    }
-    &__div h2{
-        font-size: 5vw;
-        font-weight: 500;
-        margin-bottom: 0.8vw;
-        margin-left: 1.7vw;
-    }
-    &__div span{
-        display: block;
-        width: 13vw;
-        border-bottom: 0.9vw solid $tertiaire;
-        margin-bottom: 3vw;
-        margin-left: 2vw;
-    }
-    .plat{
-        height: 20vw;
-        width: 100%;
-        background-color: white;
-        border-radius: 4.3vw;
-        margin-bottom: 5vw;
-        box-shadow: $box-shadow;
-        display: flex;
-        flex-direction: row;
-        overflow: hidden;
-        animation: slidedown 1s;
-    }
-    @for $i from 1 through 10 {
-        .delay-#{$i}{
-            animation-delay: #{$i/10}s;
-        }
-    }
-    .plat__text{
-        font-size: $text-plat;
-        margin-left: 3.7vw;
-        width: 70vw;
-        @include ellipsis;
-    }
-    .plat__text h3{
-        margin-top: 4vw;
-        margin-bottom: 2vw;
-        font-size: 4.7vw;
-        @include ellipsis;
-    }
-    .plat__text p{
-        margin: 0;
-        @include ellipsis;
-        }
-    .plat__prix{
-        font-size: $text-plat;
-        margin-top: 12vw;
-        margin-right: 7vw;
-        margin-left: 8vw;
-    }
-    .confirmation{
-        width: 0;
-        background-color: $tertiaire;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        transform-origin: right;
-        transform: scaleX(0);
-        transition: all 0.7s;
-    }
-    .plat:hover .confirmation{
-        transform: scaleX(1);
-        width: 17vw;
-    }
-    .confirmation__icon{
-        color: $tertiaire;
-        background-color: white;
-        width: 6.5vw;
-        height: 6vw;
-        padding-top: 0.5vw;
-        display: flex;
-        font-size: 4vw;
-        justify-content: center;
-        align-items: center;
-        border-radius: 20vw;
-        transform: rotate(360deg);
-        transition-duration: 0.9s;
-    }
-    .plat:hover .confirmation__icon{
-        transform: rotate(0);
-    }
-    button{
-        width: 45vw;
-        height: 11vw;
-        font-size: 4vw;
-        color: white;
-        background: linear-gradient(357deg, $primaire ,$secondaire);
-        border: none;
-        box-shadow: $box-shadow;
-        border-radius: 25vw;
-        margin-top: 6vw;
-       
-    }
-    
-}
+@import "../sass/components/boutons.scss";
+@import "../sass/layouts/header.scss";
+@import "../sass/components/position.scss";
+@import "../sass/pages/body.scss";
+@import "../sass/components/fonctionnement.scss";
+@import "../sass/components/restaurant-list.scss";
+@import "../sass/layouts/footer.scss";
+@import "../sass/pages/restaurant/card.scss";
+@import "../sass/pages/restaurant/plats.scss";
+@import "../sass/pages/restaurant/presentation-plats.scss";
+
+
+
+
+
+
+
+
 
