--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,7 +5,7 @@
 @import "../sass/utils/keyframes.scss";
 @import "../sass/components/boutons.scss";
 @import "../sass/layouts/header.scss";
-@import "../sass/components/position.scss";
+@import "../sass/components/lieu.scss";
 @import "../sass/pages/body.scss";
 @import "../sass/components/fonctionnement.scss";
 @import "../sass/components/restaurant-list.scss";
