--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -8,3 +8,6 @@ $tertiaire: #99E2D0;
 $margin-left-page: 4.5vw;
 $margin-right-page: 4.5vw;
 $text-plat: 4vw;
+$breakpoints: (
+    tablette: 768px
+);
