--- a/sass/utils/mixins.scss
+++ b/sass/utils/mixins.scss
@@ -9,3 +9,8 @@
     white-space: nowrap;
     overflow: hidden;
 }
+@mixin tablette-only {
+    @media screen and(min-width: map-get($breakpoints, tablette)){
+        @content;
+    }
+}
