--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,6 +20,12 @@
   box-shadow: 0vw 0.6vw 5vw 0.2vw #e0dede;
   border-radius: 25vw;
 }
+@media screen and (min-width: 768px) {
+  .boutton {
+    font-size: 3.5vw;
+    width: 49vw;
+  }
+}
 
 /* BOUTTON PAGE RESTAURANT */
 .boutton-restaurant {
@@ -33,6 +39,12 @@
   border-radius: 25vw;
   margin-top: 6vw;
 }
+@media screen and (min-width: 768px) {
+  .boutton-restaurant {
+    font-size: 3.7vw;
+    width: 38vw;
+  }
+}
 
 header {
   width: 100%;
@@ -44,6 +56,11 @@ header img {
   margin-top: 5vw;
   margin-bottom: 3.8vw;
 }
+@media screen and (min-width: 768px) {
+  header img {
+    width: 35vw;
+  }
+}
 header a {
   text-decoration: none;
   color: black;
@@ -53,6 +70,12 @@ header i {
   position: absolute;
   left: 7.1vw;
   top: 6.6vw;
+}
+@media screen and (min-width: 768px) {
+  header i {
+    top: 6vw;
+    font-size: 4vw;
+  }
 }
 
 .lieu {
@@ -89,11 +112,21 @@ header i {
   text-align: center;
   align-items: center;
 }
+@media screen and (min-width: 768px) {
+  .lieu__body {
+    width: 100%;
+  }
+}
 .lieu__body h1 {
   font-size: 6.8vw;
   text-align: center;
   margin-top: 9vw;
   margin-bottom: 3vw;
+}
+@media screen and (min-width: 768px) {
+  .lieu__body h1 {
+    font-size: 5.8vw;
+  }
 }
 .lieu__body p {
   font-size: 4.5vw;
@@ -125,6 +158,11 @@ body {
   width: 90vw;
   font-size: 6.8vw;
 }
+@media screen and (min-width: 768px) {
+  .fonctionnement h2 {
+    width: 50vw;
+  }
+}
 .fonctionnement__div {
   width: 86vw;
   height: 17vw;
@@ -135,6 +173,13 @@ body {
   align-items: center;
   display: flex;
   flex-direction: row;
+}
+@media screen and (min-width: 768px) {
+  .fonctionnement__div {
+    width: 72vw;
+    height: 14vw;
+    border-radius: 4.5vw;
+  }
 }
 .fonctionnement__div:hover {
   background-color: #f2eafb;
@@ -155,17 +200,40 @@ body {
   margin-left: -2.7vw;
   margin-right: 5vw;
 }
+@media screen and (min-width: 768px) {
+  .fonctionnement span {
+    width: 5.6vw;
+    height: 5.6vw;
+  }
+}
 .fonctionnement i {
   margin-right: 5vw;
   font-size: 5vw;
 }
+@media screen and (min-width: 768px) {
+  .fonctionnement i {
+    font-size: 4.2vw;
+  }
+}
 .fonctionnement p {
   font-size: 5vw;
+}
+@media screen and (min-width: 768px) {
+  .fonctionnement p {
+    font-size: 4.2vw;
+  }
 }
 
 .restaurant {
   background-color: #f7f7f7;
   padding: 4.5vw;
+}
+@media screen and (min-width: 768px) {
+  .restaurant .contenaire-restaurant {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
 }
 .restaurant a {
   text-decoration: none;
@@ -174,12 +242,25 @@ body {
 .restaurant h2 {
   font-size: 6.8vw;
 }
+@media screen and (min-width: 768px) {
+  .restaurant h2 {
+    text-align: center;
+  }
+}
 .restaurant__div {
   height: 65vw;
   border-radius: 6vw;
   margin-bottom: 6vw;
   background-color: white;
   box-shadow: 0vw 0.6vw 5vw 0.2vw #e0dede;
+  position: relative;
+}
+@media screen and (min-width: 768px) {
+  .restaurant__div {
+    width: 43.7vw;
+    height: 36vw;
+    border-radius: 3vw;
+  }
 }
 .restaurant .nouveau {
   background-color: #99E2D0;
@@ -191,10 +272,19 @@ body {
   align-items: center;
   position: absolute;
   margin-top: 3vw;
-  right: 8vw;
+  right: 5.5vw;
   font-size: 3.8vw;
   font-weight: 700;
   color: #278870;
+}
+@media screen and (min-width: 768px) {
+  .restaurant .nouveau {
+    width: 12vw;
+    height: 4vw;
+    font-size: 2.2vw;
+    right: 3vw;
+    margin-top: 2vw;
+  }
 }
 .restaurant__div div {
   display: flex;
@@ -204,16 +294,28 @@ body {
   margin-left: 2vw;
   justify-content: center;
 }
+@media screen and (min-width: 768px) {
+  .restaurant__div div {
+    margin-left: 1.2vw;
+  }
+}
 .restaurant__heart {
   position: absolute;
   font-size: 6.4vw;
-  right: 10vw;
+  right: 7vw;
   margin-top: 1.7vw;
+}
+@media screen and (min-width: 768px) {
+  .restaurant__heart {
+    font-size: 3.5vw;
+    right: 5vw;
+    margin-top: 0vw;
+  }
 }
 .restaurant__heart-like {
   background-size: 100%;
   font-size: 6.4vw;
-  right: 10vw;
+  right: 6.95vw;
   margin-top: 1.7vw;
   position: absolute;
   -webkit-background-clip: text;
@@ -228,17 +330,34 @@ body {
 .restaurant__heart-like:hover {
   opacity: 1;
   transform: scale(1.12);
-  width: 6.579vw;
+}
+@media screen and (min-width: 768px) {
+  .restaurant__heart-like {
+    font-size: 3.5vw;
+    right: 5vw;
+    margin-top: 0vw;
+  }
 }
 .restaurant h3 {
   margin-top: 1.5vw;
   margin-bottom: 1vw;
   font-size: 5vw;
 }
+@media screen and (min-width: 768px) {
+  .restaurant h3 {
+    font-size: 3vw;
+    margin-bottom: 0;
+  }
+}
 .restaurant p {
   margin-top: 0.5vw;
   margin-bottom: 0;
   font-size: 4.7vw;
+}
+@media screen and (min-width: 768px) {
+  .restaurant p {
+    font-size: 3vw;
+  }
 }
 .restaurant img {
   width: 100%;
@@ -246,6 +365,12 @@ body {
   border-radius: 6vw 6vw 0 0;
   object-fit: cover;
   object-position: center;
+}
+@media screen and (min-width: 768px) {
+  .restaurant img {
+    height: 24.5vw;
+    border-radius: 3vw 3vw 0 0;
+  }
 }
 
 .footer {
@@ -255,17 +380,37 @@ body {
   color: white;
   padding-top: 5vw;
 }
+@media screen and (min-width: 768px) {
+  .footer {
+    height: 40vw;
+  }
+}
 .footer__logo {
   font-family: Shrikhand;
   font-size: 6vw;
   margin-left: 8.5vw;
 }
+@media screen and (min-width: 768px) {
+  .footer__logo {
+    font-size: 4vw;
+  }
+}
 .footer p {
   margin-left: 8.5vw;
   font-size: 3.8vw;
 }
+@media screen and (min-width: 768px) {
+  .footer p {
+    font-size: 3vw;
+  }
+}
 .footer .fa-hands-helping {
   font-size: 2.8vw;
+}
+@media screen and (min-width: 768px) {
+  .footer .fa-hands-helping {
+    font-size: 2.3vw;
+  }
 }
 
 .presentation {
@@ -288,6 +433,12 @@ body {
   display: flex;
   width: 95vw;
 }
+@media screen and (min-width: 768px) {
+  .presentation__h1 {
+    font-size: 6.5vw;
+    align-items: center;
+  }
+}
 .presentation__div {
   height: auto;
   margin-bottom: 4vw;
@@ -299,12 +450,25 @@ body {
   margin-bottom: 0.8vw;
   margin-left: 1.7vw;
 }
+@media screen and (min-width: 768px) {
+  .presentation__div h2 {
+    text-align: center;
+    margin-left: 0;
+  }
+}
 .presentation__div span {
   display: block;
   width: 13vw;
   border-bottom: 0.9vw solid #99E2D0;
   margin-bottom: 3vw;
   margin-left: 2vw;
+}
+@media screen and (min-width: 768px) {
+  .presentation__div span {
+    margin-left: auto;
+    margin-right: auto;
+    width: 16vw;
+  }
 }
 .presentation .plat {
   height: 20vw;
@@ -317,6 +481,11 @@ body {
   flex-direction: row;
   overflow: hidden;
   animation: pop 1s;
+}
+@media screen and (min-width: 768px) {
+  .presentation .plat {
+    height: 17vw;
+  }
 }
 .presentation .delay-1 {
   animation-delay: 0.1s;
@@ -356,6 +525,11 @@ body {
   white-space: nowrap;
   overflow: hidden;
 }
+@media screen and (min-width: 768px) {
+  .presentation .plat__text {
+    font-size: 4vw;
+  }
+}
 .presentation .plat__text h3 {
   margin-top: 4vw;
   margin-bottom: 2vw;
@@ -363,6 +537,12 @@ body {
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+}
+@media screen and (min-width: 768px) {
+  .presentation .plat__text h3 {
+    font-size: 4vw;
+    margin-top: 2vw;
+  }
 }
 .presentation .plat__text p {
   margin: 0;
@@ -375,6 +555,12 @@ body {
   margin-top: 12vw;
   margin-right: 7vw;
   margin-left: 8vw;
+}
+@media screen and (min-width: 768px) {
+  .presentation .plat__prix {
+    font-size: 4vw;
+    margin-top: 9vw;
+  }
 }
 .presentation .confirmation {
   width: 0;
