--- a/sass/components/_lieu.scss
+++ b/sass/components/_lieu.scss
@@ -30,12 +30,18 @@
         flex-direction: column;
         text-align: center;
         align-items: center;
+        @include tablette-only{
+            width: 100%;
+        }
     }
     &__body h1{
         font-size: $titre-section;
         text-align: center;
         margin-top: 9vw;
         margin-bottom: 3vw;
+        @include tablette-only{
+            font-size: 5.8vw;
+        }
     }
     &__body p{
         font-size: 4.5vw;
